# RegRadar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
assets/: index-BJT6hlb_.css  index-C06kQp38.js
backend/: main.py  scheduler.py
backend/agents/: __init__.py  base.py  impact_analysis.py  policy_crawler.py
backend/api/: agents.py  byok.py  dashboard.py  datadog_metrics.py  security.py  trigger.py  violations.py
backend/data/: models.py  schema.sql
backend/integrations/: clickhouse_client.py  firecrawl.py  nimble.py  vertex_ai.py
backend/orchestrator/: blackboard.py
backend/utils/: env.py  logging.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DEMO_SCRIPT.md  DEPLOY.md  DEPLOYMENT.md  FRONTEND.md  INTEGRATIONS.md  PRIZES.md  SEED_DATA.md  TESTING.md  agent_table_flow.html  data_model_erd.html  data_model_erd.mmd  policy_crawler_build_plan_1.md  regradar-clickhouse.md  regradar_problem_statement.md  regradar_problem_statement_2.md  regradar_system_design_1.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentActivityPanel.tsx  Card.tsx  Header.tsx  (+10 more)
scripts/: demo_trigger.py  run_asset_scanner.sh  run_impact_agent.sh  run_policy_crawler.sh  run_with_lapdog.sh  setup.sh  setup_cc_accounts.py  smoke_test.py  test_crawler.py
seed/: controls.json  novapay_profile.json
seed/portfolios/: generate_portfolios.py
(+1 files in other folders)
